--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
     <div class="wrapper">
         <div class="password-box">
-            <input type="text" placeholder="@codin$gla^" disabled />
-            <i class="uil uil-copy"></i>
+            <input type="text" disabled />
+          <i class="uil uil-copy copy-icon"></i> 
+           
         </div>
         <div class="range-box">
             <input type="range" min="6" max="16" value="8" />
@@ -22,6 +23,6 @@
         <button class="generate-button">Generate Password</button>
 
     </div>
-    
+    <script src="main.js"></script>
 </body>
 </html>
